--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -150,22 +150,12 @@ TIP: Exams are taken on the ITC CLASS server in this course.
 == Oct 23
 === Readings to do this week
 * Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Programmability Lab Activities] for this week.
-* Introducing the Cloud Materials:
-+
---
-NOTE: Skip all the "exercises" in these for now, they will be lab activities in class next week
---
-** https://learn.microsoft.com/en-us/training/paths/microsoft-azure-fundamentals-describe-cloud-concepts/[Microsoft Azure Fundamentals: Describe cloud concepts]
-** https://learn.microsoft.com/en-us/training/paths/azure-fundamentals-describe-azure-architecture-services/[Microsoft Azure Fundamentals: Describe Azure architecture and services]
-** https://learn.microsoft.com/en-us/training/modules/tour-azure-portal/[Manage services with the Azure portal]
-** https://learn.microsoft.com/en-us/training/modules/control-and-organize-with-azure-resource-manager/[https://learn.microsoft.com/en-us/training/modules/control-and-organize-with-azure-resource-manager/]
 
 === Other Work to do this week
 * Model Driven Network Programmability and IOS XR Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
 * REST API Fundamentals & Network Programmability Discussion All Posts
 * Model Driven Network Programmability and IOS XR Discussion First Posts
 * REST APIs and Introducing Network Programmability Exam
-* Introducing the Cloud Discussion First Posts
 
 === Assignments Due by 6pm Today
 * REST API Fundamentals & Network Programmability Lab Report
@@ -174,6 +164,32 @@ NOTE: Skip all the "exercises" in these for now, they will be lab activities in 
 * Getting Started with DevNet Exam
 
 == Oct 30
+=== Readings to do this week
+* Readings for the network programmability unit are embedded within the lab activities. See the xref:assignments.adoc#_network_programmability_labs[Network Programmability Lab Activities] for this week.
+* Introducing the Cloud Materials:
++
+--
+NOTE: Skip all the "exercises" in these for now, they will be lab activities in class next week
+--
+** https://learn.microsoft.com/en-us/training/paths/microsoft-azure-fundamentals-describe-cloud-concepts/[Microsoft Azure Fundamentals: Describe cloud concepts]
+** https://learn.microsoft.com/en-us/training/paths/azure-fundamentals-describe-azure-architecture-services/[Microsoft Azure Fundamentals: Describe Azure architecture and services]
+** https://learn.microsoft.com/en-us/training/modules/tour-azure-portal/[Manage services with the Azure portal]
+** https://learn.microsoft.com/en-us/training/modules/control-and-organize-with-azure-resource-manager/[Control and organize Azure resources with Azure Resource Manager]
+
+=== Other Work to do this week
+* Introducing the Cloud Discussion First Posts
+* Getting Started with Ansible for Network Programmability First Posts
+* Model Driven Network Programmability and IOS XR Discussion All Posts
+* Getting Started with Ansible for Network Programmability Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* Model Driven Network Programmability and IOS XR Exam
+
+=== Assignments Due by 6pm Today
+* Model Driven Network Programmability and IOS XR Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
+* REST API Fundamentals & Network Programmability Discussion All Posts
+* Model Driven Network Programmability and IOS XR Discussion First Posts
+* REST APIs and Introducing Network Programmability Exam
+
+== Nov 6
 === Work to do in/during class time tonight
 * Introducing the Cloud Labs
 
@@ -188,19 +204,20 @@ NOTE: Skip all the "exercises" in these for now, they will be lab activities in 
 ** https://learn.microsoft.com/en-us/training/modules/manage-virtual-machines-with-azure-cli/[Manage virtual machines with the Azure CLI]
 
 === Other Work to do this week
-* Model Driven Network Programmability and IOS XR Discussion All Posts
+* Getting Started with Ansible for Network Programmability All Posts
 * Introducing the Cloud Discussion All Posts
 * Using Azure Virtual Machines Discussion First Posts
+* Getting Started with Ansible for Network Programmability Exam
 * Introducing the Cloud Exam
 
 === Assignments Due by 6pm Today
-* Model Driven Network Programmability and IOS XR Lab (see xref:assignments.adoc#_network_programmability_labs[Assignments page])
-* REST API Fundamentals & Network Programmability Discussion All Posts
-* Model Driven Network Programmability and IOS XR Discussion First Posts
-* REST APIs and Introducing Network Programmability Exam
 * Introducing the Cloud Discussion First Posts
+* Getting Started with Ansible for Network Programmability First Posts
+* Model Driven Network Programmability and IOS XR Discussion All Posts
+* Getting Started with Ansible for Network Programmability Lab Report
+* Model Driven Network Programmability and IOS XR Exam
 
-== Nov 6
+== Nov 13
 === Work to do in/during class time tonight
 * Using Azure Virtual Machines Labs
 
@@ -222,13 +239,14 @@ NOTE: Skip all the "exercises" in these for now, they will be lab activities in 
 * Come up with an idea for your case study project
 
 === Assignments Due by 6pm Today
-* Model Driven Network Programmability and IOS XR Discussion All Posts
-* Introducing the Cloud Discussion Response Posts
-* Introducing the Cloud Lab Reports
+* Getting Started with Ansible for Network Programmability All Posts
+* Introducing the Cloud Discussion All Posts
+* Using Azure Virtual Machines Discussion First Posts
+* * Introducing the Cloud Lab Report
+* Getting Started with Ansible for Network Programmability Exam
 * Introducing the Cloud Exam
-* Introducing the Cloud Discussion First Posts
 
-== Nov 13
+== Nov 20
 === Work to do in/during class time tonight
 * Scaling Azure Virtual Machines Labs
 * Get final approval of case study project
@@ -246,19 +264,6 @@ NOTE: Skip all the "exercises" in these for now, they will be lab activities in 
 * Using Azure Virtual Machines Exam
 * Using Azure Virtual Machines Lab Report
 
-== Nov 20
-=== Readings to do this week
-* Readings as required for your case study projects
-
-=== Other Work to do this week
-* Scaling Azure Virtual Machines Discussion Response Posts
-* Work on case study lab work
-
-=== Assignments Due by 6pm Today
-* Scaling Azure Virtual Machines Discussion Response Posts
-* Scaling Azure Virtual Machines Exam
-* Scaling Azure Virtual Machines Lab Report
-
 == Nov 27
 === Work to do in/during class time tonight
 * Work on case study lab work
@@ -270,7 +275,9 @@ NOTE: Skip all the "exercises" in these for now, they will be lab activities in 
 * Work on case study lab work
 
 === Assignments Due by 6pm Today
-* None
+* Scaling Azure Virtual Machines Discussion Response Posts
+* Scaling Azure Virtual Machines Exam
+* Scaling Azure Virtual Machines Lab Report
 
 == Dec 4
 === Work to do in/during class time tonight
